# ffi-opaque

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
