[package]
name = "ffi-opaque"
version = "2.0.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
edition = "2018"
license = "MIT"
description = "A simple macro to create correct opaque pointers."
documentation = "https://docs.rs/ffi-opaque/"
homepage = "https://github.com/skade/ffi-opaque"
repository = "https://github.com/skade/ffi-opaque"
keywords = ["ffi", "macro", "safety"]
categories = ["development-tools::ffi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
static_assertions = "1"
